--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:allowBackup="true"
+        android:noHistory = "true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -14,10 +15,9 @@
         android:theme="@style/Theme.Fishing_App"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LogoActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Fishing_App.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TextContentActivity" />
+        <activity android:name=".MainActivity" android:theme="@style/Theme.Fishing_App.NoActionBar" />
     </application>
 
 </manifest>
